--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -50,7 +50,16 @@
     "cancel": "отменить",
     "createAccaunt": "создать аккаунт",
     "registration": "регистрация",
-    "feedInformation": "введите данные"
+    "feedInformation": "введите данные",
+    "alreadyExists": "пользователь с таким логином или телефоном уже существует",
+    "invalidData": "невалидные данные, пароль минимум 6 символов, телефон число, логин минимум 1 символ",
+    "invalid": "некоректные данные",
+    "userCreated": "пользователь создан",
+    "changeLogin": "измените логин, или выберете другое действие",
+    "serverError": "ошибка обращения к серверу, подождите, либо выполните другое действие",
+    "ghost": "данный логин уже используется в заемах",
+    "isItYou": "Это действительно вы?",
+    "confirm": "подтвердить"
   },
   "usersPage": {
     "myContacts": "мои контакты",
