--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -44,6 +44,7 @@
   },
   "loginPage": {
     "login": "login",
+    "logIn": "log In",
     "firstName": "firstName",
     "phone": "phone",
     "password": "password",
