--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -44,6 +44,7 @@
   },
   "loginPage": {
     "login": "логин",
+    "logIn": "войти",
     "firstName": "имя",
     "phone": "телефон",
     "password": "пароль",
