--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -15,10 +15,25 @@
     "howMach": "сколько",
     "delete": "удалить",
     "selectUserlogin": "выберите логин пользователя",
-    "addNewUser": "добавить нового пользователя",
+    "addNewUser": "добавить пользователя к расчету",
     "create": "создать",
     "clearForm": "очистить форму",
-    "fieldsWith*Should": "* Поля со звездочкой обязательны к заполнению"
+    "fieldsWith*Should": "* Поля со звездочкой обязательны к заполнению",
+    "totalAmount":"общая сумма"
+  },
+  "newUser": {
+    "amountDeposited": "внес сумму",
+    "spentOnHimself": "потратил на себя",
+    "totalAmount": "всего должен",
+    "calculaded": "рассчет...",
+    "paidRest": "оплатил остаток"
+  },
+  "validation": {
+    "twoUsers": "минимум 2 пользователя",
+    "totalMoreSumLoans": "общая сумма не может быть меньше суммы затрат и долгов",
+    "totalMorePay": "общая сумма не может быть меньше суммы внесенных денег",
+    "totalMoreLoan": "потратил на себя не может быть больше всего должен",
+    "shouldDetails": "все поля детали должны быть заполнены"
   },
   "layout": {
     "contacts": "пользователи",
