before deploy refactro add loan page

--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -33,7 +33,8 @@
     "totalMoreSumLoans": "общая сумма не может быть меньше суммы затрат и долгов",
     "totalMorePay": "общая сумма не может быть меньше суммы внесенных денег",
     "totalMoreLoan": "потратил на себя не может быть больше всего должен",
-    "shouldDetails": "все поля детали должны быть заполнены"
+    "shouldDetails": "все поля детали должны быть заполнены",
+    "notEnoughData": "все результаты заемов равны 0"
   },
   "layout": {
     "contacts": "пользователи",
