--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -34,7 +34,8 @@
     "totalMoreSumLoans": "totalSum should be more then sum of loans and totalAmount",
     "totalMorePay": "totalSum should be more then sum of all pay",
     "totalMoreLoan": "loan should be less then totalAmount",
-    "shouldDetails": "all fields Details should be filled in"
+    "shouldDetails": "all fields Details should be filled in",
+    "notEnoughData": "all results of loans equal 0"
   },
   "layout": {
     "contacts": "users",
